tests/paczka1/small_fuzzy/78456002.err
Error in line 7: LGGUs02L3Lm S599 101,24
Error in line 2: smARQ4 A594 88,9
Error in line 15: 20J0j A7m1 92,6
Error in line 3: 20J0j S599 72,8
